<resources>
    <string name="app_name">Stealthy Striver</string>
    <string name="register">注册</string>
    <string name="no_account">没有账号?立即</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="hint_login_email">登录邮箱</string>
    <string name="hint_register_email">注册邮箱</string>
    <string name="hint_login_passwd">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="tv_register_slogan">要偷偷学习然后…</string>
    <string name="tv_register_hint">注册信息中 * 为必填项</string>
    <string name="char_star">*</string>
    <string name="hint_login_pwd_confirm">确认密码</string>
    <string name="dev_info">By Ading and Medi</string>
    <string name="app_name_zh">偷博仔</string>
    <string name="confirm">确认</string>
    <string name="logout">退出登录</string>
    <string name="saying">优等的心不需要华丽，但必须坚固</string>
    <string name="default_person_name">蜡笔</string>
    <string name="current_version">当前版本</string>
    <string name="github">Github</string>
    <string name="contact_email">联系邮箱</string>
    <string name="email">7342000940@qq.com</string>
    <string name="more_setting">更多设置</string>
    <string name="about">关于</string>
</resources>