<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.ActivateActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_logo"
            android:layout_centerHorizontal="true" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/anim_heartman" />

        <TextView
            android:id="@+id/tv_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_app_zh"
            android:layout_marginTop="9dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_app"
            android:gravity="center_horizontal"
            android:text="@string/app_name_zh"
            android:textColor="#EFD240"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_dev_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gif"
            android:gravity="center_horizontal"
            android:text="@string/dev_info"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </RelativeLayout>
</layout>