<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.HomeFragment"
        android:padding="4dp"
        android:background="@drawable/bg_login">

        <androidx.cardview.widget.CardView
            android:layout_alignParentTop="true"
            android:id="@+id/cv_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="#EEF6F6F6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_person_data_avatar"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/iv_person_data_avatar"
                    android:id="@+id/tv_person_name"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:text="@string/default_person_name"
                    android:textSize="26sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tv_person_sign"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_person_name"
                    android:textColor="#656C9F"
                    android:text="@string/saying"
                    android:textSize="16sp"
                    android:layout_alignStart="@+id/tv_person_name"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_avatar"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="10dp"
            android:backgroundTint="#F6F6F6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lay_app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_color_secondary"
                    android:gravity="center_vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/current_version"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_color_secondary"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/github"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:drawableRightCompat="@drawable/icon_open_black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_color_secondary"
                    android:gravity="center_vertical"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/contact_email"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_copy_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:textColor="@color/text_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line" />

                <TextView
                    android:id="@+id/tv_more_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/theme_color_secondary"
                    android:gravity="center_vertical"
                    android:padding="12dp"
                    android:text="@string/more_setting"
                    android:textColor="@color/text_color"
                    android:textSize="16sp"
                    app:drawableRightCompat="@drawable/icon_open_black" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:layout_above="@+id/tv_dev_info"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_logout"
            app:cornerRadius="30dp"
            android:layout_gravity="center_horizontal"
            android:textSize="19sp"
            android:text="@string/logout"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:id="@+id/tv_dev_info"
            android:text="@string/dev_info"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"/>





    </RelativeLayout>



</layout>