<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="login"
            type="com.mediading.stealthystriver.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity"
        android:background="@drawable/bg_login">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_steathyStriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginTop="280dp" />

        <LinearLayout
            android:id="@+id/registry_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/other_login_lay">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/register"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:focusable="true" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_below="@+id/tv_steathyStriver"
            app:cardCornerRadius="23dp"
            app:strokeColor="@color/cardview_shadow_end_color"
            app:strokeWidth="2dp">

            <LinearLayout
                android:id="@+id/input_lay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:paddingTop="18dp"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_username"
                    android:layout_margin="15dp"
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_login_email"
                    android:text="@={login.userLogin.loginName}"/>

                <EditText
                    android:paddingTop="18dp"
                    android:drawablePadding="5dp"
                    android:layout_margin="15dp"
                    android:drawableStart="@drawable/ic_password"
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_login_passwd"
                    android:text="@={login.userLogin.password}"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:clickable="true"
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/cv_input"
            android:layout_below="@id/cv_input"
            android:text="@string/forget_pwd"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:focusable="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forget_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FBDDAB"
            android:paddingHorizontal="100dp"
            android:paddingVertical="12dp"
            android:text="@string/btn_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:strokeColor="@color/cardview_shadow_end_color"
            app:strokeWidth="2dp" />

        <LinearLayout
            android:id="@+id/other_login_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/ic_wechat" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginHorizontal="30dp"
                android:src="@drawable/ic_qq" />

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/ic_phone" />
        </LinearLayout>

    </RelativeLayout>
</layout>