<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="register"
            type="com.mediading.stealthystriver.viewmodel.RegisterViewModel" />
        <variable
            name="confirmPasswd"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_login">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/tv_steathyStriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_register_slogan"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginBottom="28dp"
            android:padding="5dp"
            android:layout_marginTop="300dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            app:cardCornerRadius="23dp"
            app:strokeColor="@color/cardview_shadow_end_color"
            app:strokeWidth="2dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="32dp">



                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_account_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/theme_color_secondary"
                            android:hint="@string/hint_register_email"
                            android:text="@={register.userRegister.EMail}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/et_account_lay"
                        android:layout_alignEnd="@+id/et_account_lay"
                        android:layout_alignBottom="@+id/et_account_lay"
                        android:gravity="center"
                        android:text="@string/char_star"
                        android:textColor="@color/dialog_title_color"
                        android:textSize="24sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_pwd_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_account_lay"
                        android:layout_marginTop="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/theme_color_secondary"
                            android:hint="@string/hint_login_passwd"
                            android:inputType="textPassword"
                            android:text="@={register.userRegister.password}" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_confirm_pwd_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_pwd_lay"
                        android:layout_marginTop="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_confirm_pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/theme_color_secondary"
                            android:hint="@string/hint_login_pwd_confirm"
                            android:inputType="textPassword"
                            android:text="@={confirmPasswd}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/et_confirm_pwd_lay"
                        android:layout_alignEnd="@+id/et_confirm_pwd_lay"
                        android:layout_alignBottom="@+id/et_confirm_pwd_lay"
                        android:gravity="center"
                        android:text="@string/char_star"
                        android:textColor="@color/dialog_title_color"
                        android:textSize="24sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/et_pwd_lay"
                        android:layout_alignEnd="@+id/et_pwd_lay"
                        android:layout_alignBottom="@+id/et_pwd_lay"
                        android:gravity="center"
                        android:text="@string/char_star"
                        android:textColor="@color/dialog_title_color"
                        android:textSize="24sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FBDDAB"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="100dp"
            android:paddingVertical="12dp"
            android:text="@string/btn_register"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:strokeColor="@color/cardview_shadow_end_color"
            app:strokeWidth="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/tv_register_hint"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>
</layout>